--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/Amir_SF_DP.jpg" alt="Amir Mohideen Basheer Khan" width="80">
+          <img src="./assets/images/Amir.png" alt="Amir Mohideen Basheer Khan" width="80">
         </figure>
 
         <div class="info-content">
