--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 
 
             <li class="project-item  active" data-filter-item="" data-category="professional"
-              data-year="June 2024 - Present" data-link="https://youtu.be/wghtOic6b5M"
+              data-year="June 2024 - Present" data-link="https://youtu.be/XE-F9KPwBIg"
               data-summary="Allows users to fly an evtol in VR while we measure their physiological signals using gadgets and also portray their data within simulation to see how motion sick they feel">
               <a href="#">
 
@@ -590,7 +590,7 @@
 
                 <!-- YouTube Embed -->
                 <!-- <div class="youtube-container">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/ADThSN3S60g"
+                  <iframe width="350" height="200" src="https://www.youtube.com/embed/ADThSN3S60g"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
