updated with gifs

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     <ion-icon name="logo-youtube"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-VReVTOL.png" alt="VReVTOL" loading="lazy" data-project-img="">
+                  <img src="./assets/images/vrevtol_anim.gif" alt="VReVTOL" loading="lazy" data-project-img="">
                 </figure>
 
                 <h3 class="project-title">VR eVTOL Flying Simulation (funded by DoD)</h3>
@@ -431,7 +431,7 @@
                     <ion-icon name="logo-youtube"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-mindpool.png" alt="XRMindMapping" loading="lazy"
+                  <img src="./assets/images/mindpool_anim.gif" alt="XRMindMapping" loading="lazy"
                     data-project-img="">
                 </figure>
 
@@ -454,7 +454,7 @@
                     <ion-icon name="logo-youtube"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-XRBirthday.png" alt="XRBirthday" loading="lazy" data-project-img="">
+                  <img src="./assets/images/bdayquest_anim.gif" alt="XRBirthday" loading="lazy" data-project-img="">
                 </figure>
 
                 <h3 class="project-title">AnniversaryQuest - VR/AR Experience App</h3>
