--- a/index.html
+++ b/index.html
@@ -102,19 +102,7 @@
 
           </li>
 
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Phone</p>
-
-              <a href="tel:+15625264146" class="contact-link">+1 (562) 526-4146</a>
-            </div>
-
-          </li>
+          
 
           <li class="contact-item">
 
@@ -126,6 +114,20 @@
               <p class="contact-title">Location</p>
 
               <address>Pomona, California, USA</address>
+            </div>
+
+          </li>
+
+          <li class="contact-item">
+
+            <div class="icon-box">
+              <ion-icon name="phone-portrait-outline"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">YouTube</p>
+
+              <a href="https://www.youtube.com/@10XVAR" class="contact-link">youtube.com/@10XVAR</a>
             </div>
 
           </li>
