updated mindpool yt demo link

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item="" data-category="university"
-              data-year="June 2024 - Present" data-link="https://youtu.be/ADThSN3S60g"
+              data-year="June 2024 - Present" data-link="https://youtu.be/e5DMfq4i4cA"
               data-summary="Developed an interactive Mixed Reality (MR) spatial mind mapping app using XR Interaction Toolkit (XRITK 3.0), implementing a custom input 
               controller that allowed users to create notes, open browsers, and connect nodes using controllers or hand tracking, enhancing brainstorming efficiency.">
               <a href="#">
