added yt channel in project

--- a/index.html
+++ b/index.html
@@ -553,6 +553,26 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item="" data-category="personal"
+              data-year="June 2024 - Present" data-link="https://www.youtube.com/@10XVAR"
+              data-summary="Sharing my knowledge about XR, VR, AR & AI so that you can 10x yours!">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project_10XVAR.jpg" alt="ecommerce" loading="lazy"
+                    data-project-img="">
+                </figure>
+
+                <h3 class="project-title">10XVAR - XR/VR/AR/AI Tutorials (YouTube Channel)</h3>
+
+                <p class="project-category">Personal</p>
+
+              </a>
+            </li>
 
 
           </ul>
