updated 2 project yt links

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 
 
             <li class="project-item  active" data-filter-item="" data-category="professional"
-              data-year="June 2024 - Present" data-link="https://youtu.be/XE-F9KPwBIg"
+              data-year="June 2024 - Present" data-link="https://youtu.be/o-m5KEgEb18"
               data-summary="Allows users to fly an evtol in VR while we measure their physiological signals using gadgets and also portray their data within simulation to see how motion sick they feel">
               <a href="#">
 
@@ -423,7 +423,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item="" data-category="university"
-              data-year="June 2024 - Present" data-link="https://youtu.be/e5DMfq4i4cA"
+              data-year="June 2024 - Present" data-link="https://youtu.be/LWcDMhXzZ0Q"
               data-summary="Developed an interactive Mixed Reality (MR) spatial mind mapping app using XR Interaction Toolkit (XRITK 3.0), implementing a custom input 
               controller that allowed users to create notes, open browsers, and connect nodes using controllers or hand tracking, enhancing brainstorming efficiency.">
               <a href="#">
@@ -447,7 +447,7 @@
 
 
             <li class="project-item  active" data-filter-item="" data-category="personal"
-              data-year="June 2024 - Present" data-link="https://youtu.be/07rKWHxRN2g"
+              data-year="June 2024 - Present" data-link="https://www.meta.com/experiences/anniversaryquest/8862346790558393/"
               data-summary="Allows users to immerse themselves in a forest environment and walk down a trail with floating videos on each side that has vidoes of the user’s loved ones wishing them well">
               <a href="#">
 
