Added trailer video

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
           </li>
 
-          
+
 
           <li class="contact-item">
 
@@ -230,21 +230,15 @@
 
       <article class="portfolio  active" data-page="portfolio">
 
-        <header>
-          <h2 class="h2 article-title">About me</h2>
-        </header>
-
-        <section class="about-text">
-
-          <li>• Experienced XR/VR/AR Developer</li>
-          <li>• Graduating in 2025 with a Master's Degree in Computer Science from Cal
-            Poly Pomona, CA, USA
-          <li>• Gained International Experience in IT and Entrepreneurship via Internships & Studies in
-            Singapore, Dubai & USA</li>
-          <li>• Skilled in Unity, C#, XR Interaction Toolkit, Virtual & Augmented Reality, UI/UX Design</li>
-          <li>• Built and managed a branded online ecommerce store</li>
-          <li>• Published a Paper on Automation and Artificial Intelligence (AI) in IEEE</li>
-
+        <!--
+          - Trailer Section
+        -->
+        <section class="trailer-section" style="margin: 3rem 0; text-align: center;">
+          <!-- <h2 class="h2 article-title">Trailer</h2> -->
+          <div class="trailer-video-container">
+            <iframe class="trailer-video" src="https://www.youtube.com/embed/gYZqyKvwlLk" title="YouTube video player"
+              frameborder="0" allowfullscreen></iframe>
+          </div>
         </section>
 
 
@@ -433,8 +427,7 @@
                     <ion-icon name="logo-youtube"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/mindpool_anim.gif" alt="XRMindMapping" loading="lazy"
-                    data-project-img="">
+                  <img src="./assets/images/mindpool_anim.gif" alt="XRMindMapping" loading="lazy" data-project-img="">
                 </figure>
 
                 <h3 class="project-title">MindPool - XR Mind Mapping App</h3>
@@ -447,7 +440,8 @@
 
 
             <li class="project-item  active" data-filter-item="" data-category="personal"
-              data-year="June 2024 - Present" data-link="https://www.meta.com/experiences/anniversaryquest/8862346790558393/"
+              data-year="June 2024 - Present"
+              data-link="https://www.meta.com/experiences/anniversaryquest/8862346790558393/"
               data-summary="Allows users to immerse themselves in a forest environment and walk down a trail with floating videos on each side that has vidoes of the user’s loved ones wishing them well">
               <a href="#">
 
@@ -563,8 +557,7 @@
                     <ion-icon name="logo-youtube"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project_10XVAR.jpg" alt="ecommerce" loading="lazy"
-                    data-project-img="">
+                  <img src="./assets/images/project_10XVAR.jpg" alt="ecommerce" loading="lazy" data-project-img="">
                 </figure>
 
                 <h3 class="project-title">10XVAR - XR/VR/AR/AI Tutorials (YouTube Channel)</h3>
@@ -841,6 +834,27 @@
 
         </section>
 
+
+        <!--
+          - About Me
+        -->
+
+        <header>
+          <h2 class="h2 article-title" style="margin: 1rem 0;">About me</h2>
+        </header>
+
+        <section class="about-text">
+
+          <li>• Experienced XR/VR/AR Developer</li>
+          <li>• Graduating in 2025 with a Master's Degree in Computer Science from Cal
+            Poly Pomona, CA, USA
+          <li>• Gained International Experience in IT and Entrepreneurship via Internships & Studies in
+            Singapore, Dubai & USA</li>
+          <li>• Skilled in Unity, C#, XR Interaction Toolkit, Virtual & Augmented Reality, UI/UX Design</li>
+          <li>• Built and managed a branded online ecommerce store</li>
+          <li>• Published a Paper on Automation and Artificial Intelligence (AI) in IEEE</li>
+
+        </section>
 
         <!--
           - testimonials
