updated trailer video

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <section class="trailer-section" style="margin: 3rem 0; text-align: center;">
           <!-- <h2 class="h2 article-title">Trailer</h2> -->
           <div class="trailer-video-container">
-            <iframe class="trailer-video" src="https://www.youtube.com/embed/gYZqyKvwlLk" title="YouTube video player"
+            <iframe class="trailer-video" src="https://www.youtube.com/embed/V-lOf6gxS5U" title="YouTube video player"
               frameborder="0" allowfullscreen></iframe>
           </div>
         </section>
