reduced vr evtol resume desc. + github link added

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
           </li>
 
           <li class="social-item">
-            <a href="https://amirmohideen.itch.io/" class="social-link">
-              <ion-icon class="socials-icons" name="game-controller-outline"></ion-icon>
+            <a href="https://github.com/amirmohideen" class="social-link">
+              <ion-icon class="socials-icons" name="logo-github"></ion-icon>
             </a>
           </li>
 
@@ -157,17 +157,16 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.facebook.com/amir.mohideen.7" class="social-link">
-              <ion-icon class="socials-icons" name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
             <a href="https://x.com/amir_mohideen" class="social-link">
               <ion-icon class="socials-icons" name="logo-twitter"></ion-icon>
             </a>
           </li>
 
+           <li class="social-item">
+            <a href="https://amirmohideen.itch.io/" class="social-link">
+              <ion-icon class="socials-icons" name="game-controller-outline"></ion-icon>
+            </a>
+          </li>
 
 
         </ul>
@@ -703,26 +702,13 @@
               <span>06/2024 — Present</span>
 
               <p style="margin-bottom: 7px;" class="timeline-text">
-                • Collaborated with a multidisciplinary team to develop a VR eVTOL flying simulation funded by the U.S.
-                Air Force, leveraging Unity, XR Interaction Toolkit
-                2.0, and Gaia Pro to create immersive environments and enhanced simulation realism by optimizing flight
-                physics parameters using the Silantro toolkit
+                • Collaborated with a multidisciplinary team to develop a VR eVTOL flying simulation funded by DoD.
               <p style="margin-bottom: 7px;" class="timeline-text">
-                • Integrated real-time physiological and neurological data collection into Unity using Biopac Ring (EDA,
-                ECG, PPG, skin temperature) and Emotiv headset
-                (brainwaves) via Lab Streaming Layer (LSL), enabling enhanced user experience evaluation by visualizing
-                metrics in VR simulation
+                • Integrated real-time physiological and neurological data collection into Unity using Biopac Ring (EDA, ECG, PPG, Skin Temperature) and Emotiv headset (EEG Brainwaves)
               </p>
               <p style="margin-bottom: 7px;" class="timeline-text">
-                • Achieved significant VR performance optimization for heavy environments by reducing polycounts to 155k
-                using occlusion culling, disabling shadows,
-                modifying rendering pipeline settings, and performing light mapping, resulting in smoother user
-                experiences on XR headsets
+                • Presented vulnerabilities discovered when streaming user data via LSL, leading to the implementation of a secure data transmission protocol
               </p>
-              <p style="margin-bottom: 7px;" class="timeline-text">
-                • Tested and optimized the simulation for Meta Quest 2, Pro, 3, and 3s XR headsets, resolving
-                compatibility challenges </p>
-            </li>
 
             <li class="timeline-item">
 
