Update Resume <li> list

--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
               <h4 class="h4 timeline-item-title">California State Polytechnic University, Pomona - Master of Science in
                 Computer Science - (GPA 4/4) </h4>
 
-              <span>Jan 2023 — Present</span>
+              <span>Jan 2023 — May 2025</span>
 
               <!-- <p class="timeline-text">
                 <b>Relevent Cources:</b> Game Development, Human Computer Interaction, Information Retrieval, Computer Vision, Advanced Software Engineering 
@@ -703,30 +703,27 @@
 
               <h4 class="h4 timeline-item-title">XR Developer & Research Assistant @ Cal Poly Pomona</h4>
 
-              <span>06/2024 — Present</span>
+              <span>June 2024 — May 2025</span>
 
-              <p style="margin-bottom: 7px;" class="timeline-text">
-                • Collaborated with a multidisciplinary team to develop a VR eVTOL flying simulation funded by DoD.
-              <p style="margin-bottom: 7px;" class="timeline-text">
-                • Integrated real-time physiological and neurological data collection into Unity using Biopac Ring (EDA, ECG, PPG, Skin Temperature) and Emotiv headset (EEG Brainwaves)
-              </p>
-              <p style="margin-bottom: 7px;" class="timeline-text">
-                • Presented vulnerabilities discovered when streaming user data via LSL, leading to the implementation of a secure data transmission protocol
-              </p>
+              <ul class="timeline-text">
+                <li>Led a multidisciplinary team to develop a VR eVTOL flying simulation funded by DoD.</li>
+                <li>Integrated real-time physiological and neurological data collection into Unity using Biopac Ring (EDA, ECG, PPG, Skin Temperature) and Emotiv headset (EEG Brainwaves).</li>
+                <li>Presented vulnerabilities discovered when streaming user data via LSL, leading to the implementation of a secure data transmission protocol.</li>
+              </ul>
 
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">VR/AR Lab Assistant & Technical Instructor @ Cal Poly Pomona</h4>
 
-              <span>08/2024 — Present</span>
-
-              <p style="margin-bottom: 7px;" class="timeline-text">
-                • Conducted 4 immersive XR workshops (2 hours each), equipping 54 students with Unity skills for VR game
-                & app development and recruiting 20 students for the VR Lab
-              <p style="margin-bottom: 7px;" class="timeline-text">
-                • Mentored and collaborated weekly with 5 teams (4 members each) on innovative XR game & app
+              <span>Sept 2024 — May 2025</span>
+              
+              <ul class="timeline-text">
+                <li>Conducted 4 immersive XR workshops (2 hours each), equipping 54 students with Unity skills for VR game
+                & app development and recruiting 20 students for the VR Lab</li>
+                <li>Mentored and collaborated weekly with 5 teams (4 members each) on innovative XR game & app
                 development, providing technical guidance, fostering
-                problem-solving, and promoting best coding practices
+                problem-solving, and promoting best coding practices</li>
+              </ul>
 
             </li>
 
@@ -734,11 +731,12 @@
 
               <h4 class="h4 timeline-item-title">CTO @ AllTerrX</h4>
 
-              <span>01/2024 — Present</span>
+              <span>June 2024 — Present</span>
+              <!-- <p class="timeline-text"><i>Los Angeles, California</i></p> -->
 
-              <p style="margin-bottom: 7px;" class="timeline-text">
-                • Created Unity 3D Simulations that portrayed our propietary guidance navigation and control system
-              </p>
+              <ul class="timeline-text">
+              <li>Created Unity 3D Simulations showcasing our proprietary GNC system</li>
+              </ul>
 
             </li>
 
@@ -746,12 +744,13 @@
 
               <h4 class="h4 timeline-item-title">Product Tester @ Google</h4>
 
-              <span>25 September 2023</span>
+              <span>25 Sept 2023</span>
+              <!-- <p class="timeline-text"><i>Los Angeles, California</i></p> -->
 
-              <p style="margin-bottom: 7px;" class="timeline-text">
-                • Collaborated with 12 Google employees over an 8-hour research session to test Google's GenAI LLM
-                product, MakerSuite, providing actionable feedback
-              </p>
+              <ul class="timeline-text">
+              <li>Collaborated with 12 Google employees over an 8-hour research session to test Google's GenAI LLM
+                product, MakerSuite, providing actionable feedback</li>
+              </ul>
 
             </li>
 
