--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Languages: </h5>
-                <data value="80">C#, C++, Python, Java, JavaScript, Bash, SQL</data>
+                <data value="80">C# • C++ • Python • Java • JavaScript • Bash • SQL</data>
               </div>
 
             </li>
@@ -780,7 +780,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">XR Tools: </h5>
-                <data value="80">Unity3D, XR Interaction Toolkit 3.0 & 2.0, OculusSDK, MRTK, OpenXR</data>
+                <data value="80">Unity3D • XR Interaction Toolkit 3.0 & 2.0 • OculusSDK • MRTK • OpenXR</data>
               </div>
 
             </li>
@@ -789,7 +789,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">XR Hardware: </h5>
-                <data value="80">Meta Quest 2, Pro, 3, 3s, Microsoft HoloLens, HTC Vive</data>
+                <data value="80">Meta Quest 2 • Pro • 3 • 3s • Microsoft HoloLens • HTC Vive</data>
               </div>
 
             </li>
@@ -798,7 +798,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Libraries/Frameworks: </h5>
-                <data value="80">Node.js, HTML, CSS, OpenCV</data>
+                <data value="80">Node.js • HTML • CSS • OpenCV</data>
               </div>
 
             </li>
@@ -807,7 +807,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Tools and Platforms: </h5>
-                <data value="80">Git, .NET, Google Cloud Platform, AWS, Microsoft Azure, VS Code</data>
+                <data value="80">Git • .NET • Google Cloud Platform • AWS • Microsoft Azure • VS Code</data>
               </div>
 
             </li>
@@ -816,7 +816,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Hands-on skills: </h5>
-                <data value="80">Agile, Scrum, Git, SDLC, OOD</data>
+                <data value="80">Agile • Scrum • Git • SDLC • OOD</data>
               </div>
 
             </li>
@@ -1477,7 +1477,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Languages: </h5>
-                <data value="80">C#, C++, Python, Java, JavaScript, Bash, SQL</data>
+                <data value="80">C# • C++ • Python • Java • JavaScript • Bash • SQL</data>
               </div>
 
             </li>
